first change in new season

--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "appnode",
+  "name": "blog-hector",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "start": "node app"
@@ -12,6 +11,7 @@
   "dependencies": {
     "cowsay": "^1.5.0",
     "ejs": "^3.1.6",
-    "express": "^4.17.1"
-  }
+    "express": "^4.18.2"
+  },
+  "description": ""
 }
